# OncoMolML

./: .gitignore  README.md  pyproject.toml
docs/: code_practice_cheatsheet.md  interview_prep_guide.md  practice_frameworks.py
examples/: drug_response_prediction.py
oncomolml/: __init__.py
oncomolml/models/: __init__.py  jax_models.py  pytorch_models.py  tensorflow_models.py
oncomolml/pipelines/: __init__.py  cancer_pipeline.py
oncomolml/utils/: __init__.py  jit_utils.py
tests/: test_models.py
