[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncomolml"
version = "0.1.0"
description = "High-performance ML toolkit for cancer drug discovery and NGS analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "machine-learning",
    "drug-discovery",
    "cancer",
    "ngs",
    "pytorch",
    "tensorflow",
    "jax",
    "bioinformatics",
    "deep-learning",
    "genomics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "rdkit>=2022.03.1",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
]
tensorflow = [
    "tensorflow>=2.15.0",
]
jax = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
]
jit = [
    "numba>=0.57.0",
]
all = [
    "oncomolml[pytorch,tensorflow,jax,jit]",
]
dev = [
    "oncomolml[all]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/oncomolml"
Documentation = "https://oncomolml.readthedocs.io"
Repository = "https://github.com/yourusername/oncomolml"
Issues = "https://github.com/yourusername/oncomolml/issues"

[project.scripts]
oncomolml = "oncomolml.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oncomolml*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=oncomolml --cov-report=term-missing"
